--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -1,10 +1,12 @@
 // colors
-$primaryColor: #000;
-$primaryColorHover: #000;
-$secondaryColor: #000;
-$secondaryColorHover: #000;
+$primaryColor: #E62F32;
+$primaryColorHover: #D3191C;
 
-$backgroundColor: #000;
+$backgroundColor: #F5F5F5;
 
-$titleColor: #000;
-$subtitleColor: #000;
+$titleColor: #2D2D2D;
+$subtitleColor: #343434;
+
+// spacing and sizings
+$parentRadius: 15px;
+$childRadius: $parentRadius / 2;
