--- a/public/styles/dashboard.module.scss
+++ b/public/styles/dashboard.module.scss
@@ -46,3 +46,18 @@
       transition: background-color 0.3s;
     }
 }
+
+.cardContainer {
+  background-color: $primaryColor;
+  padding: 10px 12px;
+  border-radius: $childRadius;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+
+  h3 {
+    font-weight: bold;
+    font-size: 20px;
+  }
+}
