updated nav component

--- a/components/layout/navigation/navigation.module.scss
+++ b/components/layout/navigation/navigation.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     padding: 15px 50px;
     background-color: white; 
-    position: absolute;
+    position: fixed;
     bottom: 0; 
 
     ul {
