Navbar Updated & Checkbox deleted from Tables

--- a/components/layout/navigation/navigation.module.scss
+++ b/components/layout/navigation/navigation.module.scss
@@ -20,5 +20,9 @@
             color: white;
             background-color: $primaryColor;
         }
+
+        h5 {
+            font-size: 14px;
+        }
     }
 }
