Dashboard's index UPDATED

--- a/public/styles/dashboard.module.scss
+++ b/public/styles/dashboard.module.scss
@@ -50,8 +50,6 @@
 .cardContainer, .staffCardContainer {
     padding: 10px 12px;
     border-radius: $childRadius;
-    display: flex;
-    flex-direction: column;
     gap: 12px;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 
@@ -59,14 +57,24 @@
         font-weight: bold;
         font-size: 20px;
     }
+
+    span {
+      color: white;
+    }
+}
+
+.cardContainer {
+  background-color: $primaryColor;
+  height: 100px;
 }
 
 .staffCardContainer {
   height: 120px;
   font-size: 24px;
-  display: flex;
   align-items: center;
   justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .primaryCardContainer {
